--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 <body>
     <main class="main-content">
-        <header class="header-banner">
-            <h1 class="main-title">Amigo Secreto</h1>
-            <img src="assets/amigo-secreto.png" alt="Imagem representativa de amigo secreto">
-        </header>
+       <header class="header-banner">
+  <img src="https://i.pinimg.com/736x/3d/a4/bf/3da4bf358f721f1acc227639df18fec6.jpg" alt="Amigas fofas" class="friendship-banner">
+  <h1 class="main-title">Amigo Secreto</h1>
+</header>
+
         
         <section class="input-section">
             <h2 class="section-title">Digite o nome dos seus amigos</h2>
